--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -13,7 +13,7 @@
    
         {{ book.id.__str__() + " " + book.__str__() + " " + book.author.__str__() }} &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<!-- <a href="{{ url_for('update', id=book.id) }}">Update Book</a> -->
         <button type=button onclick="window.location.href='{{ url_for('update', id=book.id) }}'">Update Book </button>
-        <button type=button onclick="window.location.href='{{ url_for('delete_book', i=book.id) }}'">Delete Book </button>
+        <button type=button onclick="window.location.href='{{ url_for('delete', i=book.id) }}'">Delete Book </button>
         <br>
         {% endfor %}
 {% endblock body %}
